refactor: add methods to Game according to documentation